--- a/requirements.txt
+++ b/requirements.txt
@@ -2,37 +2,34 @@ blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+faiss-cpu==1.10.0
 filelock==3.17.0
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
-fsspec==2024.12.0
+fonttools==4.56.0
+fsspec==2025.2.0
 greenlet==3.1.1
 huggingface-hub==0.28.1
 idna==3.10
+ijson==3.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 joblib==1.4.2
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 mpmath==1.3.0
 networkx==3.4.2
 nltk==3.9.1
-numpy==2.2.2
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+numpy==2.2.3
 packaging==24.2
 pillow==11.1.0
 psycopg2==2.9.10
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
@@ -42,14 +39,14 @@ scikit-learn==1.6.1
 scipy==1.15.1
 sentence-transformers==3.4.1
 setuptools==75.8.0
+six==1.17.0
 SQLAlchemy==2.0.38
 sympy==1.13.1
 threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.6.0
 tqdm==4.67.1
-transformers==4.48.2
-triton==3.2.0
+transformers==4.48.3
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
