--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,27 @@ mpmath==1.3.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 psycopg2==2.9.10
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -47,6 +62,8 @@ tokenizers==0.21.0
 torch==2.6.0
 tqdm==4.67.1
 transformers==4.48.3
+triton==3.2.0
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 Werkzeug==3.1.3
